--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,3 +77,11 @@ header {
     color: white;
     border: solid var(--light);
 }
+
+#rel {
+  position: relative;
+}
+
+#modalButton {
+  position: absolute;
+}
