--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,3 +91,84 @@ header {
   position: absolute;
   color: black;
 }
+
+.modal-content {
+  background-color: white;
+  padding: 8px;
+  font-weight: bold;
+  border-radius: 10px;
+  max-width: 450px;
+}
+
+.modal-close {
+  position: absolute;
+  top: 10px;
+  padding-bottom: 10px;
+  right: 570px;
+  cursor: pointer;
+}
+
+.modal-close:hover {
+  color: red;
+}
+
+
+/*Media Query*/
+
+@media (max-width: 800px) {
+  /* CSS styles for smaller screens */
+  .modal-content {
+      background-color: white;
+      padding: 8px;
+      border-radius: 10px;
+      max-width: 450px;
+  }
+
+  .modal-close {
+      position: absolute;
+      top: 10px;
+      right: 100px;
+      font-size: 26px;
+      font-weight: bold;
+      cursor: pointer;
+  }
+}
+
+@media (max-width: 600px) {
+  /* CSS styles for smaller screens */
+  .modal-content {
+      background-color: white;
+      padding: 8px;
+      border-radius: 10px;
+      max-width: 350px;
+  }
+
+  .modal-close {
+      position: absolute;
+      top: 10px;
+      right: 75px;
+      font-size: 26px;
+      font-weight: bold;
+      cursor: pointer;
+  }
+}
+
+
+@media (max-width: 400px) {
+  /* CSS styles for smaller screens */
+  .modal-content {
+      background-color: white;
+      padding: 8px;
+      border-radius: 10px;
+      max-width: 250px;
+  }
+
+  .modal-close {
+      position: absolute;
+      top: 10px;
+      right: 50px;
+      font-size: 26px;
+      font-weight: bold;
+      cursor: pointer;
+  }
+}
